Focus newly opened window when noopener is specified.

When r601148 was committed, the codepath for window.open() and link
clicks that result in a new window with 'noopener' attribute was changed
to avoid going to the embedder with OpenURL. The result was that the
newly created window was no longer focused, which was done previously
as a side effect of OpenURL calling chrome::Navigate.

This CL adds focusing in the changed codepath to restore this behavior.

Bug: 912348, 912712
Change-Id: Ia4f5b58a71cbe86bc28b434c0b0501b156c64bc1
Reviewed-on: https://chromium-review.googlesource.com/c/1367164
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Commit-Queue: Nasko Oskov <nasko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614847}
Former-commit-id: 28ebd5bc2acb2b87566d1af5e4c907b8761b5b17